--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,6 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.6.0",
-        "behat/behat": "~3.0",
         "atoum/atoum": "~1.0|~2.0|~3.0|3.0.x-dev",
         "symfony/property-access": "~2.5|~3.0|~4.0",
         "justinrainbow/json-schema": ">=3.0 <6.0",
@@ -30,7 +29,15 @@
         "php-http/client-common": "^1.2",
         "php-http/message": "^1.3",
         "tolerance/tolerance": "^0.4",
-        "mtdowling/jmespath.php": "^2.3"
+        "mtdowling/jmespath.php": "^2.3",
+        "guzzle/guzzle": "2.4.*",
+        "guzzlehttp/guzzle":"^6.0",
+        "behat/symfony2-extension":     "*",
+        "behat/mink-extension":         "*",
+        "doctrine/doctrine-bundle":     "*",
+        "doctrine/data-fixtures":       "*",
+        "kriswallsmith/buzz":           "~0.5",
+        "behat/behat": "2.4.0"
     },
     "require-dev": {
         "silex/silex": "~2.0",
